welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
while(getCouleurSol(c:green)) {
	while (!estSurBiscuit()) {
		recule()
}
	prendBiscuit()
	while(!estSurBiscuit()) {
		avance()
}
	recule()
	poseBiscuit()

}
